# svte

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  \  bwin64.sh  cc.sh  compile_commands.json  format.sh  meson.build  readme.md  run.sh
core/: buffer.cpp  parser.cpp  sys.cpp
core/buffer/: buf_constructor.cpp  buf_cursor.cpp  buf_insert.cpp  buf_iterator.cpp  buf_remove.cpp  buf_search.cpp  buf_tokens.cpp
core/editor/: ed_buffers.cpp  ed_command.cpp  ed_constructor.cpp  ed_open_file.cpp  ed_save_file.cpp  ed_sys.cpp  editor.cpp
core/sys/: sys.cpp
frontend/SDL2/: sdl2_buffer_key_events.cpp  sdl2_bufrenderer.cpp  sdl2_events.cpp  sdl2_font.cpp  sdl2_init.cpp  sdl2_internal.cpp  sdl2_key_events.cpp  sdl2_mode_events.cpp  sdl2_move_events.cpp  sdl2_mutation_key_events.cpp  sdl2_renderer.cpp  sdl2_window.cpp  svte_sdl2_main.cpp
frontends/SDL2/: renderer.cpp  sdl2_window.cpp  svte_sdl2_main.cpp  window.cpp
inc/: editor.hpp  errors.hpp  font.hpp  grid.hpp  keyboard.hpp  mouse.hpp  renderer.hpp  status.hpp  strbuffer.hpp  svte.hpp  vecdef.hpp  window.hpp
include/: vector.hpp
include/SDL2/: sdl2_context.hpp  sdl2_enums.hpp  sdl2_error_codes.hpp  sdl2_events.hpp  sdl2_macdef.hpp  sdl2_renderer.hpp  sdl2_st_enums.hpp  sdl2_window.hpp  window.hpp
include/core/: buffer.hpp  char_defs.hpp  core_buffer.hpp  core_defines.hpp  core_editor.hpp  core_error_codes.hpp  core_event_mgr.hpp  core_events.hpp  core_iterator.hpp  core_parser.hpp  core_structs.hpp  core_sys.hpp  core_token.hpp  defines.hpp  editor.hpp  error_codes.hpp
include/ncurses/: ncurses_draw.hpp  ncurses_events.hpp  ncurses_termspace.hpp
license/: OFL.txt  zlib.txt
src/: alias.hpp  buffer.cpp  buffer.hpp  chars.cpp  config.hpp  editor.cpp  events.cpp  font.cpp  input.hpp  io.cpp  main.cpp  render_draw.cpp  renderer.cpp  svte.cpp  svte.hpp  txt_render.cpp  util.cpp  util.hpp  window.cpp
src/core/: buffer.cpp  buffer.hpp  events.cpp  font.cpp  io.cpp  main.cpp  renderer.cpp  util.cpp  window.cpp
src/events/: events.cpp  events.hpp
src/renderer/: font.cpp  renderer.cpp  renderer.hpp
src/util/: alias.hpp  util.cpp  util.hpp
src/window/: window.cpp  window.hpp
